# Smart_shelf

./: README.md
Hardware/SmartShelf_Hardware/HallPCB/: HallPCB (2).step  HallPCB.kicad_pcb  HallPCB.kicad_prl  HallPCB.kicad_pro  HallPCB.kicad_sch  HallPCB.step  fp-info-cache
Hardware/SmartShelf_Hardware/MainBoard/: SmartShelf.kicad_pcb  SmartShelf.kicad_prl  SmartShelf.kicad_pro  fp-info-cache
Software/AWS_Lambda_functions/Mqtt_to_Timestream/: lambda_function.py  send_email.py  startup.py
Software/AWS_Lambda_functions/Timestream_to_API/: lambda_function.py
Software/AWS_Lambda_functions/UI_message_to_mqtt/: lambda_function.py
Software/AWS_Lambda_functions/company_infomation/: lambda_function.py
Software/shelf_core/: CMakeLists.txt  dependencies.lock.orig  sdkconfig  sdkconfig.old  sdkconfig.orig
Software/shelf_core/main/: CMakeLists.txt  idf_component.yml  idf_component.yml.orig  main.cpp
Software/shelf_core/main/User/: StateMachine.cpp  StateMachine.cpp.orig  StateMachine.h  common.cpp  common.h
Software/shelf_core/main/User/Message_control/: Message_controller.cpp  Message_controller.cpp.orig  Message_controller.h
Software/shelf_core/main/User/Shelf_control/: Display.cpp  Display.h  HX711.cpp  Shelf_controller.cpp  Shelf_controller.cpp.orig  Shelf_controller.h
Software/shelf_core/main/User/Shelf_control/UI/: ui.c  ui.h  ui_Screen1.c  ui_Screen2.c
Software/shelf_core/tmp/: aws_esp-Policy  aws_esp.public.key  client.crt  client.key  smart_shelf_1_windows-Policy  smart_shelf_1_windows.public.key
Software/shelf_core/tmp_C/: aws_esp-Policy  aws_esp.public.key  client.crt  client.key  start.ps1
(+12 files in other folders)
